--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.3.4",
     "echarts": "^5.4.3",
+    "gh-pages": "^6.1.1",
     "swiper": "^9.2.0",
     "vue": "^3.2.47",
     "vue-echarts": "^6.6.1",
